install zint with apt

--- a/docker/Dockerfile-base
+++ b/docker/Dockerfile-base
@@ -4,7 +4,6 @@ ARG PROFILE="communes.cfg"
 
 WORKDIR /plone
 USER root
-COPY --chown=imio docker/zint-2.10.0-src.tar.gz /home/imio/
 COPY --chown=imio *.cfg *.conf requirements.txt Makefile /plone/
 # RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
 RUN apt-get update -qqy \
@@ -26,6 +25,7 @@ RUN apt-get update -qqy \
      libpq5 \
      lbzip2 \
      libsigc++-2.0-0v5 \
+     zint \
   && apt-get purge -qqy libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && buildDeps="build-essential \
         python2-dev \
@@ -60,12 +60,6 @@ RUN apt-get update -qqy \
   && rm -rf /var/lib/apt/lists/* \
   && pip install "virtualenv>=20.7.2" \
   && gem install docsplit \
-  && tar -x -C /home/imio -f /home/imio/zint-2.10.0-src.tar.gz \
-  && rm /home/imio/zint-2.10.0-src.tar.gz \
-  && cd /home/imio/zint-* \
-  && cmake --log-level=ERROR . \
-  && make --quiet \
-  && make --quiet install \
   && cd /plone \
   && sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "[buildout]" > buildout.cfg \
@@ -88,9 +82,6 @@ LABEL delib=$DELIB_VERSION \
       maintainer="iMio"
 
 COPY --from=builder /usr/local/lib/python2.7/dist-packages /usr/local/lib/python2.7/dist-packages
-COPY --from=builder /usr/local/lib/libzint.so* /usr/local/lib/
-COPY --from=builder /usr/local/include/zint.h /usr/local/include/
-COPY --from=builder /usr/local/bin/zint /usr/local/bin/
 
 COPY --chown=imio --from=builder /plone /plone/
 COPY --chown=imio docker/docker-initialize.py docker/*.sh /plone/
@@ -117,6 +108,7 @@ RUN apt-get update \
      libpq5 \
      lbzip2 \
      libsigc++-2.0-0v5 \
+     zint \
   && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && rm -rf /var/lib/apt/lists/* \
   && gem install docsplit \
