Use Products.MeetingCharleroi = 4.2.0b2

--- a/charleroi-dev.cfg
+++ b/charleroi-dev.cfg
@@ -20,7 +20,7 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingCharleroi = git ${remotes:imio}/Products.MeetingCharleroi.git pushurl=${remotes:imio_push}/Products.MeetingCharleroi.git branch=4.2.x
+Products.MeetingCharleroi = git ${remotes:imio}/Products.MeetingCharleroi.git pushurl=${remotes:imio_push}/Products.MeetingCharleroi.git branch=master
 
 [testcharleroi]
 recipe = zc.recipe.testrunner
