--- a/seraing-dev.cfg
+++ b/seraing-dev.cfg
@@ -20,7 +20,7 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=4.2.x
+Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=master
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 
 [testseraing]
