Use Products.MeetingNamur = 4.2.0a1

--- a/namur-dev.cfg
+++ b/namur-dev.cfg
@@ -4,8 +4,8 @@ extends =
     dev.cfg
 
 auto-checkout +=
-    Products.MeetingCommunes
     Products.MeetingNamur
+    Products.MeetingCommunes
 
 parts +=
     testnamur
@@ -20,7 +20,7 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingNamur = git ${remotes:imio}/Products.MeetingNamur.git pushurl=${remotes:imio_push}/Products.MeetingNamur.git branch=4.2.x
+Products.MeetingNamur = git ${remotes:imio}/Products.MeetingNamur.git pushurl=${remotes:imio_push}/Products.MeetingNamur.git branch=master
 
 [testnamur]
 recipe = zc.recipe.testrunner
