--- a/docker/Dockerfile-latest
+++ b/docker/Dockerfile-latest
@@ -4,11 +4,17 @@ ARG PROFILE="communes.cfg"
 
 WORKDIR /plone
 USER root
+# Required by docsplit: default-jre-headless libreoffice-java-common libreoffice-writer libreoffice-calc
+
 COPY --chown=imio *.cfg *.conf requirements.txt Makefile docker/docker-initialize.py docker/*.sh /plone/
 RUN apt-get update \
   && apt-get full-upgrade -qqy \
   && apt-get install -qqy --no-install-recommends \
      lynx \
+     default-jre-headless \
+     libreoffice-java-common \
+     libreoffice-writer \
+     libreoffice-calc \
      libreoffice-script-provider-python \
      file \
      imagemagick \
