use branch master for lalouviere

--- a/lalouviere-dev.cfg
+++ b/lalouviere-dev.cfg
@@ -17,7 +17,7 @@ zcml +=
     Products.MeetingLalouviere
 
 [sources]
-Products.MeetingLalouviere = git ${remotes:imio}/Products.MeetingLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingLalouviere.git branch=4.2-migrtation
+Products.MeetingLalouviere = git ${remotes:imio}/Products.MeetingLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingLalouviere.git branch=master
 
 [testlalouviere]
 recipe = zc.recipe.testrunner
