Execute tests of imio.pm.ws in prod-test

--- a/prod-test.cfg
+++ b/prod-test.cfg
@@ -10,7 +10,7 @@ parts =
 
 [testprod]
 recipe = zc.recipe.testrunner
-defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCommunes', '-s', 'plonemeeting.restapi']
+defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCommunes', '-s', 'plonemeeting.restapi', '-s', 'imio.pm.ws']
 eggs =
     ${test:eggs}
     Products.MeetingCommunes [test]
