Use: Products.MeetingCommunes = 4.2 Products.PloneMeeting = 4.2 appy = 1.0.14 collective.compoundcriterion = 0.6 collective.contact.plonegroup = 1.45 collective.documentgenerator = 3.38 collective.eeafaceted.z3ctable = 2.19 collective.messagesviewlet = 1.0b2 imio.actionspanel = 1.62 imio.dashboard = 2.10 imio.helpers = 0.66 imio.history = 1.28 imio.pm.locales = 4.2 imio.pyutils = 0.27 plonetheme.imioapps = 2.38 collective.iconifiedcategory = 0.56 imio.pm.ws = 3.7 imio.zamqp.core = 0.7 imio.zamqp.pm = 0.16 plonemeeting.restapi = 2.0

--- a/versions.cfg
+++ b/versions.cfg
@@ -5,34 +5,34 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2rc34
+Products.PloneMeeting = 4.2
 
 # profile specific versions
-Products.MeetingCommunes = 4.2b24
+Products.MeetingCommunes = 4.2
 
 # Required by:
 # Products.PloneMeeting
-appy = 1.0.12
+appy = 1.0.14
 archetypes.schematuning = 1.2
 beautifulsoup4 = 4.5.3
 collective.behavior.talcondition = 0.14
 collective.ckeditor = 4.10.1
-collective.compoundcriterion = 0.5
+collective.compoundcriterion = 0.6
 collective.contact.core = 1.39
-collective.contact.plonegroup = 1.44
+collective.contact.plonegroup = 1.45
 collective.contact.widget = 1.13
 collective.dexteritytextindexer = 2.2.1
-collective.documentgenerator = 3.35
+collective.documentgenerator = 3.38
 collective.eeafaceted.batchactions = 1.11
 collective.eeafaceted.collectionwidget = 1.14
 collective.eeafaceted.dashboard = 0.20
-collective.eeafaceted.z3ctable = 2.18
+collective.eeafaceted.z3ctable = 2.19
 collective.fingerpointing = 1.8.2
 collective.js.fancytree = 2.20.0.1
 collective.js.iframeresizer = 0.4
 collective.js.tablednd = 0.1
 collective.iconifieddocumentactions = 1.3.2
-collective.messagesviewlet = 0.23
+collective.messagesviewlet = 1.0b2
 collective.usernamelogger = 1.4
 collective.z3cform.select2 = 2.0.1
 communesplone.layout = 4.3.15.1
@@ -42,20 +42,20 @@ dexterity.localroles = 1.4
 ecreall.helpers.upgrade = 1.4
 ftw.labels = 2.0.1
 imio.annex = 2.18
-imio.actionspanel = 1.60
-imio.dashboard = 2.9
-imio.helpers = 0.62
+imio.actionspanel = 1.62
+imio.dashboard = 2.10
+imio.helpers = 0.66
 imio.migrator = 1.32
-imio.history = 1.27
-imio.pm.locales = 4.2b31
+imio.history = 1.28
+imio.pm.locales = 4.2
 imio.prettylink = 1.20
-imio.pyutils = 0.25
+imio.pyutils = 0.27
 natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.6
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
-plonetheme.imioapps = 2.37
+plonetheme.imioapps = 2.38
 Products.CPUtils = 1.22
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
@@ -69,7 +69,7 @@ six = 1.14.0
 #imio.annex
 collective.dms.scanbehavior = 1.1
 collective.fontawesome = 1.1
-collective.iconifiedcategory = 0.55
+collective.iconifiedcategory = 0.56
 collective.js.tooltipster = 1.7
 icalendar = 3.11
 z3c.jbot = 0.7.2
@@ -188,7 +188,7 @@ fpconst = 0.7.2
 SOAPpy = 0.12.5
 suds-jurko = 0.6
 
-imio.pm.ws = 3.6
+imio.pm.ws = 3.7
 imio.pm.wsclient = 1.17
 
 plone.app.async = 1.6
@@ -226,8 +226,8 @@ collective.prometheus = 1.6.0
 # AMQP
 imio.dataexchange.core = 0.2
 collective.zamqp = 0.16.1
-imio.zamqp.core = 0.6
-imio.zamqp.pm = 0.15
+imio.zamqp.core = 0.7
+imio.zamqp.pm = 0.16
 reportlab = 3.4.0
 PyPDF2 = 1.26.0
 
@@ -236,7 +236,7 @@ functools32 = 3.2.3.post2
 
 # plonemeeting.restapi
 imio.restapi = 1.0b1
-plonemeeting.restapi = 1.0rc18
+plonemeeting.restapi = 2.0
 
 plone.restapi = 7.8.0
 PyJWT = 1.7.1
