Execute also imio.pm.ws tests with testprod

--- a/prod-test.cfg
+++ b/prod-test.cfg
@@ -15,4 +15,5 @@ eggs =
     ${test:eggs}
     Products.MeetingCommunes [test]
     plonemeeting.restapi [test]
+    imio.pm.ws [test]
 environment = testenv
