reduce instance-debug cache size

--- a/prod.cfg
+++ b/prod.cfg
@@ -48,6 +48,8 @@ zope-conf-additional =
 
 [instance-debug]
 <= instance2
+zodb-cache-size = 5000
+zeo-client-cache-size = 200MB
 http-address = ${port:instance-debug-http}
 debug-mode = on
 verbose-security = on
