--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -55,3 +55,5 @@ environment-vars += ${bigbang:environment-vars}
 
 [instance-debug]
 blob-storage = /data/blobstorage
+zodb-cache-size = 5000
+zeo-client-cache-size = 200MB
