ensure a clean buildout before building docker images

--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -49,7 +49,7 @@ RUN sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "    $PROFILE" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker-dev.cfg" >> buildout.cfg \
-  && sed -ie "s#Products.MeetingCommunes:zcity#Products.MeetingCommunes:demo#" base.cfg \
+  && rm -fr bin include lib local share develop-eggs downloads eggs parts .installed.cfg .mr.developer.cfg .git/hooks/pre-commit var/tmp \
   && su -c "virtualenv -p python2 ." -s /bin/bash imio \
   && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/bash imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/bash imio \
