--- a/docker/Dockerfile-latest
+++ b/docker/Dockerfile-latest
@@ -68,6 +68,7 @@ RUN apt-get update \
   && echo "    $PROFILE" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
+  && rm -fr bin include lib local share develop-eggs downloads eggs parts .installed.cfg .mr.developer.cfg .git/hooks/pre-commit var/tmp \
   && su -c "virtualenv -p python2 ." -s /bin/bash imio \
   && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/bash imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/bash imio \
