--- a/docker/Dockerfile-base
+++ b/docker/Dockerfile-base
@@ -50,7 +50,6 @@ RUN apt-get update -qqy \
         zlib1g-dev \
         libldap2-dev \
         libsasl2-dev \
-        libldap2-dev \
         libsigc++-2.0-dev \
         libffi-dev \
         libjpeg62-dev \
@@ -74,7 +73,7 @@ RUN apt-get update -qqy \
   && su -c "virtualenv -p python2 ." -s /bin/bash imio \
   && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/bash imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/bash imio \
-  && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/ parts/instance? bin/instance?
+  && rm -rf develop-eggs src var/blobstorage var/filestorage parts bin/instance? parts .git/hooks/pre-commit var/tmp
 
 FROM imiobe/plone-base:4.3.20-ubuntu
 ENV DELIB_MAJOR=4.2
