add testing key/secret for SSO, this is not a leaks

--- a/wca-dev.cfg
+++ b/wca-dev.cfg
@@ -4,13 +4,14 @@ extends = wca.cfg
 auto-checkout +=
     pas.plugins.imio
 
+[instance1]
 environment-vars +=
-  consumer_key_agents
-  consumer_secret_agents
+  consumer_key_agents 8a6ca7b2-123b-4fcf-a5cd-8e11daf690d1
+  consumer_secret_agents dbb48e0d-8eb0-4202-a4fc-e3a3c3084f26
   authentic_agents_hostname agents.staging.imio.be
-  service_ou
-  service_slug
-  PLONE_CSRF_DISABLED true
+  service_ou 0123456789
+  service_slug local-iadelib
 
 [sources]
 pas.plugins.imio = git ${remotes:imio}/pas.plugins.imio.git pushurl=${remotes:imio_push}/pas.plugins.imio.git branch=master
+
