--- a/docker/Dockerfile-latest
+++ b/docker/Dockerfile-latest
@@ -60,7 +60,7 @@ RUN apt-get update \
         libffi-dev" \
   && apt-get install -qqy --no-install-recommends $buildDeps \
   && rm -rf /var/lib/apt/lists/* \
-  && pip install "virtualenv>=20.7.2" \
+  && pip install "virtualenv==20.21.1" \
   && gem install docsplit \
   && sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "[buildout]" > buildout.cfg \
