--- a/lalouviere-cpas-dev.cfg
+++ b/lalouviere-cpas-dev.cfg
@@ -1,14 +1,13 @@
 [buildout]
 
 extends =
-    dev.cfg
+    communes-dev.cfg
 
 auto-checkout +=
-    Products.MeetingCommunes
     Products.MeetingCPASLalouviere
 
 parts +=
-    testlalouvierecpas
+    testlalouviere
 
 [instance1]
 eggs +=
@@ -16,13 +15,11 @@ eggs +=
 
 zcml +=
     Products.MeetingCPASLalouviere
-    Products.MeetingCommunes
-    imio.pm.locales
 
 [sources]
-Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingCPASLalouviere.git branch=master
+Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingCPASLalouviere.git branch= migration-4.2
 
-[testlalouvierecpas]
+[testlalouviere]
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCPASLalouviere']
 eggs =
