--- a/lalouviere-cpas-dev.cfg
+++ b/lalouviere-cpas-dev.cfg
@@ -7,7 +7,7 @@ auto-checkout +=
     Products.MeetingCPASLalouviere
 
 parts +=
-    testlalouviere
+    testlalouvierecpas
 
 [instance1]
 eggs +=
@@ -19,7 +19,7 @@ zcml +=
 [sources]
 Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingCPASLalouviere.git branch=migration-4.2
 
-[testlalouviere]
+[testlalouvierecpas]
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCPASLalouviere']
 eggs =
