Use sources for collective.behavior.internalnumber and branch MPMBRWP-11 for Products.PloneMeeting and collective.behavior.internalnumber See #MPMBRWP-11

--- a/dev.cfg
+++ b/dev.cfg
@@ -25,6 +25,7 @@ auto-checkout =
     imio.prettylink
     imio.pyutils
     imio.restapi
+    collective.behavior.internalnumber
     collective.behavior.talcondition
 #    collective.ckeditor
     collective.compoundcriterion
