--- a/sources.cfg
+++ b/sources.cfg
@@ -13,6 +13,7 @@ zopesvn = svn://svn.zope.org/repos/main/
 
 [sources]
 appy = git ${remotes:imio}/appy.git pushurl=${remotes:imio_push}/appy.git
+collective.behavior.internalnumber = git ${remotes:imio}/collective.behavior.internalnumber.git pushurl=${remotes:imio_push}/collective.behavior.internalnumber.git branch=MPMBRWP-11_incremental_reference
 collective.behavior.talcondition = git ${remotes:collective}/collective.behavior.talcondition.git pushurl=${remotes:collective_push}/collective.behavior.talcondition.git
 collective.ckeditor = git ${remotes:collective}/collective.ckeditor.git pushurl=${remotes:collective_push}/collective.ckeditor.git
 collective.compoundcriterion = git ${remotes:collective}/collective.compoundcriterion.git pushurl=${remotes:collective_push}/collective.compoundcriterion.git
@@ -55,7 +56,7 @@ imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_pus
 
 Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
 # used to test branches on Jenkins, leave branch=master by default
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=MPMBRWP-11_incremental_reference
 # profiles specific package
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 
