Pin collective.behavior.internalnumber = 0.1

--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -49,3 +49,5 @@ collective.MockMailHost = 2.0.0
 #plone.app.relationfield = 1.3.0
 
 collective.dexteritytextindexer = 2.2.1
+#collective.ckeditor = 4.11.0a3
+collective.behavior.internalnumber = 0.1
