Update lalouviere-cpas versions

--- a/lalouviere-cpas-dev.cfg
+++ b/lalouviere-cpas-dev.cfg
@@ -17,7 +17,7 @@ zcml +=
     Products.MeetingCPASLalouviere
 
 [sources]
-Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingCPASLalouviere.git branch=migration-4.2
+Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingCPASLalouviere.git branch=master
 
 [testlalouvierecpas]
 recipe = zc.recipe.testrunner
