--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,18 +76,18 @@ jobs:
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
           profile: lalouviere
           tags: "imiobe/iadelib:lalouviere-${{ github.ref_name }}"
-#  lalouviere-cpas:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#      - name: Build and publish to dockerhub
-#        uses: IMIO/buildout.pm/actions/dockerhub@master
-#        with:
-#          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-#          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-#          profile: lalouviere-cpas
-#          tags: "imiobe/iadelib:lalouviere-cpas-${{ github.ref_name }}"
+  lalouviere-cpas:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build and publish to dockerhub
+        uses: IMIO/buildout.pm/actions/dockerhub@master
+        with:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          profile: lalouviere-cpas
+          tags: "imiobe/iadelib:lalouviere-cpas-${{ github.ref_name }}"
   liege:
     runs-on: ubuntu-latest
     steps:
