--- a/versions.cfg
+++ b/versions.cfg
@@ -5,19 +5,20 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2
+Products.PloneMeeting = 4.2.1
 
 # profile specific versions
-Products.MeetingCommunes = 4.2
+Products.MeetingCommunes = 4.2.1
 
 # Required by:
 # Products.PloneMeeting
-appy = 1.0.14
+appy = 1.0.15
 archetypes.schematuning = 1.2
 beautifulsoup4 = 4.5.3
+collective.behavior.internalnumber = 0.2
 collective.behavior.talcondition = 0.14
 collective.ckeditor = 4.10.1
-collective.compoundcriterion = 0.6
+collective.compoundcriterion = 0.7
 collective.contact.core = 1.39
 collective.contact.plonegroup = 1.45
 collective.contact.widget = 1.13
@@ -44,10 +45,10 @@ ftw.labels = 2.0.1
 imio.annex = 2.18
 imio.actionspanel = 1.62
 imio.dashboard = 2.10
-imio.helpers = 0.66
-imio.migrator = 1.32
+imio.helpers = 0.69
+imio.migrator = 1.33
 imio.history = 1.28
-imio.pm.locales = 4.2
+imio.pm.locales = 4.2.1
 imio.prettylink = 1.20
 imio.pyutils = 0.27
 natsort = 6.2.1
@@ -55,7 +56,7 @@ plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.6
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
-plonetheme.imioapps = 2.38
+plonetheme.imioapps = 2.39
 Products.CPUtils = 1.22
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
@@ -235,10 +236,10 @@ PyPDF2 = 1.26.0
 functools32 = 3.2.3.post2
 
 # plonemeeting.restapi
-imio.restapi = 1.0b1
-plonemeeting.restapi = 2.0.1
+imio.restapi = 1.0b2
+plonemeeting.restapi = 2.0.2
 
-plone.restapi = 7.8.0
+plone.restapi = 7.8.2
 PyJWT = 1.7.1
 plone.schema = 1.2.1
 plone.rest = 1.6.1
