Use: Products.PloneMeeting = 4.2.2 Products.MeetingCommunes = 4.2.2 collective.behavior.talcondition = 1.0a1 collective.documentgenerator = 3.39 collective.eeafaceted.batchactions = 1.12 collective.eeafaceted.z3ctable = 2.21 imio.helpers = 0.70 imio.history = 1.29 imio.pm.locales = 4.2.2 imio.pyutils = 0.29 plonetheme.imioapps = 2.41 Products.CPUtils = 1.23 plonemeeting.restapi = 2.1

--- a/versions.cfg
+++ b/versions.cfg
@@ -5,10 +5,10 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2.1
+Products.PloneMeeting = 4.2.2
 
 # profile specific versions
-Products.MeetingCommunes = 4.2.1
+Products.MeetingCommunes = 4.2.2
 
 # Required by:
 # Products.PloneMeeting
@@ -16,18 +16,18 @@ appy = 1.0.15
 archetypes.schematuning = 1.2
 beautifulsoup4 = 4.5.3
 collective.behavior.internalnumber = 0.2
-collective.behavior.talcondition = 0.14
+collective.behavior.talcondition = 1.0a1
 collective.ckeditor = 4.10.1
 collective.compoundcriterion = 0.7
 collective.contact.core = 1.39
 collective.contact.plonegroup = 1.45
 collective.contact.widget = 1.13
 collective.dexteritytextindexer = 2.2.1
-collective.documentgenerator = 3.38
-collective.eeafaceted.batchactions = 1.11
+collective.documentgenerator = 3.39
+collective.eeafaceted.batchactions = 1.12
 collective.eeafaceted.collectionwidget = 1.14
 collective.eeafaceted.dashboard = 0.20
-collective.eeafaceted.z3ctable = 2.19
+collective.eeafaceted.z3ctable = 2.21
 collective.fingerpointing = 1.8.2
 collective.js.fancytree = 2.20.0.1
 collective.js.iframeresizer = 0.4
@@ -45,19 +45,19 @@ ftw.labels = 2.0.1
 imio.annex = 2.18
 imio.actionspanel = 1.62
 imio.dashboard = 2.10
-imio.helpers = 0.69
+imio.helpers = 0.70
 imio.migrator = 1.33
-imio.history = 1.28
-imio.pm.locales = 4.2.1
+imio.history = 1.29
+imio.pm.locales = 4.2.2
 imio.prettylink = 1.20
-imio.pyutils = 0.27
+imio.pyutils = 0.29
 natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.6
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
-plonetheme.imioapps = 2.39
-Products.CPUtils = 1.22
+plonetheme.imioapps = 2.41
+Products.CPUtils = 1.23
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
 simplejson = 3.13.2
@@ -237,7 +237,7 @@ functools32 = 3.2.3.post2
 
 # plonemeeting.restapi
 imio.restapi = 1.0b2
-plonemeeting.restapi = 2.0.2
+plonemeeting.restapi = 2.1
 
 plone.restapi = 7.8.2
 PyJWT = 1.7.1
