Use Products.MeetingMons = 4.2.0b3

--- a/mons.cfg
+++ b/mons.cfg
@@ -6,9 +6,12 @@ extends =
 [instance1]
 eggs +=
     Products.MeetingMons
+    imio.webspellchecker
 
 zcml +=
     Products.MeetingMons
 
 [versions]
-Products.MeetingMons = 4.2.0b1
+Products.MeetingMons = 4.2.0b3
+imio.webspellchecker = 1.0a1
+
