--- a/mons-dev.cfg
+++ b/mons-dev.cfg
@@ -20,7 +20,7 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingMons = git ${remotes:imio}/Products.MeetingMons.git pushurl=${remotes:imio_push}/Products.MeetingMons.git branch=4.2.x
+Products.MeetingMons = git ${remotes:imio}/Products.MeetingMons.git pushurl=${remotes:imio_push}/Products.MeetingMons.git
 
 [testmons]
 recipe = zc.recipe.testrunner
