--- a/sources.cfg
+++ b/sources.cfg
@@ -55,10 +55,11 @@ imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio
 imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
 
 Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
+Products.LDAPUserFolder = git https://github.com/gbastien/Products.LDAPUserFolder.git pushurl=git@github.com:gbastien/Products.LDAPUserFolder.git branch=2.x
 # used to test branches on Jenkins, leave branch=master by default
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=MPMBRWP-25_advice_wf_ui
 # profiles specific package
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=MPMBRWP-25_advice_wf_ui
 
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
