Use versions: - Products.PloneMeeting = 4.2.9b1 - Products.MeetingCommunes = 4.2.6b1 - imio.helpers = 0.78 - imio.history = 1.31

--- a/versions.cfg
+++ b/versions.cfg
@@ -5,10 +5,10 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2.8
+Products.PloneMeeting = 4.2.9b1
 
 # profile specific versions
-Products.MeetingCommunes = 4.2.5
+Products.MeetingCommunes = 4.2.6b1
 
 # Required by:
 # Products.PloneMeeting
@@ -45,9 +45,9 @@ ftw.labels = 2.0.1
 imio.annex = 2.20
 imio.actionspanel = 1.64
 imio.dashboard = 2.12
-imio.helpers = 0.77
+imio.helpers = 0.78
 imio.migrator = 1.33
-imio.history = 1.30
+imio.history = 1.31
 imio.pm.locales = 4.2.8
 imio.prettylink = 1.21
 imio.pyutils = 0.31
