--- a/actions/dockerhub/action.yml
+++ b/actions/dockerhub/action.yml
@@ -1,12 +1,6 @@
 name: 'Build and publish to dockerhub'
-description: 'Build and publish to dockerhub'
+description: 'Build and publish to dockerhub and IMIO container registry'
 inputs:
-  DOCKERHUB_USERNAME:
-    description: 'DOCKERHUB_USERNAME'
-    required: true
-  DOCKERHUB_PASSWORD:
-    description: 'DOCKERHUB_PASSWORD'
-    required: true
   profile:
     description: 'Buildout profile'
     required: true
@@ -21,17 +15,25 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout
+      uses: actions/checkout@v4
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v3
     - name: Login to DockerHub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
-        username: ${{ inputs.DOCKERHUB_USERNAME }}
-        password: ${{ inputs.DOCKERHUB_PASSWORD }}
-    - name: Build image
-      uses: docker/build-push-action@v2.5.0
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Login to Harbor
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ secrets.HARBOR_URL }}
+        username: ${{ secrets.DELIB_HARBOR_USERNAME }}
+        password: ${{ secrets.DELIB_HARBOR_PASSWORD }}
+    - name: Build and push
+      uses: docker/build-push-action@v5
       with:
         context: .
         file: ${{ inputs.dockerfile }}
