--- a/actions/harbor/action.yml
+++ b/actions/harbor/action.yml
@@ -1,4 +1,4 @@
-name: 'Build and publish to dockerhub'
+name: 'Build and publish to harbor'
 description: 'Build and publish to dockerhub and IMIO container registry'
 inputs:
   profile:
